--- a/src/main/resources/static/app/views/register.html
+++ b/src/main/resources/static/app/views/register.html
@@ -6,17 +6,17 @@
 				<form ng-submit="submit()" name="register" novalidate>
 
 					<div class="form-group"
-						ng-class="{ 'has-error': register.name.$invalid && register.name.$dirty }">
-						<label for="name">Name:</label> <input type="text" required
-							class="form-control" ng-model="appUser.name" id="name"
-							name="name">
+						 ng-class="{ 'has-error': register.username.$invalid && register.username.$dirty }">
+						<label for="username">Username:</label> <input type="text"
+																	   required class="form-control" ng-model="appUser.username"
+																	   id="username" name="username">
 					</div>
 
 					<div class="form-group"
-						ng-class="{ 'has-error': register.username.$invalid && register.username.$dirty }">
-						<label for="username">Username:</label> <input type="text"
-							required class="form-control" ng-model="appUser.username"
-							id="username" name="username">
+						ng-class="{ 'has-error': register.name.$invalid && register.name.$dirty }">
+						<label for="name">Name:</label> <input type="email" required
+							class="form-control" ng-model="appUser.email" id="name"
+							name="name">
 					</div>
 
 					<div class="form-group"
