--- a/src/main/resources/static/app/views/register.html
+++ b/src/main/resources/static/app/views/register.html
@@ -1,36 +1,54 @@
-<div class=" col-md-6 col-md-offset-3">
+<div class=" col-md-6 col-md-offset-3 well">
 	<div class="panel panel-default">
-		<div class="panel-heading">Register</div>
+		<div class="panel-heading" align="center">Sign Up</div>
 		<div class="panel-body">
 			<div class="col-md-12">
 				<form ng-submit="submit()" name="register" novalidate>
 
 					<div class="form-group"
 						 ng-class="{ 'has-error': register.username.$invalid && register.username.$dirty }">
-						<label for="username">Username:</label> <input type="text"
+						<input type="text"
+							   placeholder="Username" pattern="[a-zA-Z]+" ng-pattern-restrict
 																	   required class="form-control" ng-model="appUser.username"
 																	   id="username" name="username">
+						<p ng-show="(register.username.$invalid && !register.username.$pristine)" class="help-block">required, only a-z or A-Z characters</p>
+
 					</div>
 
 					<div class="form-group"
-						ng-class="{ 'has-error': register.name.$invalid && register.name.$dirty }">
-						<label for="name">Name:</label> <input type="email" required
-							class="form-control" ng-model="appUser.email" id="name"
-							name="name">
+						ng-class="{ 'has-error': register.email.$invalid && register.email.$dirty }">
+						<input type="email" required
+							   placeholder="Email Address"
+							class="form-control" ng-model="appUser.email" id="email"
+							name="email">
+						<p ng-show="(appUser.email=='' && !register.email.$pristine)" class="help-block">requiredt</p>
+						<p ng-show="(register.email.$invalid && !register.email.$pristine)" class="help-block">required, email format</p>
 					</div>
 
 					<div class="form-group"
 						ng-class="{ 'has-error': register.password.$invalid && register.password.$dirty }">
-						<label for="pwd">Password:</label> <input type="password" required
+						<input type="password" required
+							   pattern="^(?=.*[a-z])(?=.*[A-Z])(?=.*\d)[a-zA-Z\d]{6,}$" ng-pattern-restrict
+							   placeholder="Password"
 							class="form-control" id="pwd" ng-model="appUser.password"
 							name="password">
+						<p ng-show="(register.password.$invalid && !register.password.$pristine)" class="help-block">required, at least 6 characters long,
+							at least one lowercase letter, one uppercase
+							letter, one digit, no special symbols eg.
+							~!@#$%^&*()_+</p>
 					</div>
 
 					<div class="form-group"
 						ng-class="{ 'has-error': register.confirmPassword.$invalid && register.confirmPassword.$dirty }">
-						<label for="cpwd">Confirm Password:</label> <input type="password"
+						<input type="password"
+							   pattern="^(?=.*[a-z])(?=.*[A-Z])(?=.*\d)[a-zA-Z\d]{6,}$" ng-pattern-restrict
+																		   placeholder="Retype Password"
 							name="confirmPassword" required class="form-control" id="cpwd"
 							ng-model="confirmPassword">
+						<p ng-show="(register.confirmPassword.$invalid && !register.confirmPassword.$pristine)" class="help-block">required, at least 6 characters long,
+							at least one lowercase letter, one uppercase
+							letter, one digit, no special symbols eg.
+							~!@#$%^&*()_+</p>
 					</div>
 
 					<div class="alert alert-warning margin-top-5"
@@ -38,7 +56,7 @@
 						Matching</div>
 
 					<button type="submit" class="btn btn-default"
-						ng-disabled="register.$invalid || (confirmPassword != appUser.password)">Register</button>
+						ng-disabled="register.$invalid || (confirmPassword != appUser.password)">SIGN ME UP</button>
 					<button class="btn btn-default" ui-sref="login">Login</button>
 					<div class="alert alert-info margin-top-5" ng-show="message">{{message}}</div>
 				</form>
