--- a/src/main/resources/static/app/views/home.html
+++ b/src/main/resources/static/app/views/home.html
@@ -1,1 +1,7 @@
-<pre>{{user|json}}</pre>
+<!--<pre>{{user|json}}</pre>-->
+    <div class="input-group" width="100%">
+        <input type="text" class="form-control" placeholder="Search by keyword">
+        <span class="input-group-btn">
+        <button class="btn btn-default" type="button">Search</button>
+      </span>
+    </div><!-- /input-group -->
