--- a/src/main/resources/static/app/views/nav.html
+++ b/src/main/resources/static/app/views/nav.html
@@ -19,19 +19,21 @@
 					class="icon-bar"></span> <span class="icon-bar"></span> <span
 					class="icon-bar"></span>
 			</button>
-			<a class="navbar-brand" ui-sref="home">JWT</a>
+			<a class="navbar-brand" ui-sref="home"><img width="25" height="25" src="https://meliorem.ru/wp-content/themes/blog/img/techs/node-js.svg">
+			</a>
 		</div>
 		<div id="navbar" class="navbar-collapse collapse">
-			<ul class="nav navbar-nav">
-				<li ng-show="user.username"><a ui-sref="users">Users</a></li>
+			<ul class="nav navbar-nav navbar-center">
+				<li><a>Welcome to image Previewer!</a></li>
 			</ul>
 			<ul class="nav navbar-nav navbar-right">
 
 				<li ng-show="user.username"><a> <span class="user">Hi,
-							{{user.name}}</span> <span ng-click="logout()" href=""
+							{{user.username}}</span> <span ng-click="logout()" href=""
 						class="logout">Logout</span>
 				</a></li>
-				<li ng-show="!user.username"><a ui-sref="register">Register</a></li>
+				<li ng-show="!user.username"><a ui-sref="register">Sign Up</a></li>
+				<li ng-show="!user.username"><a ui-sref="login">Log In</a></li>
 			</ul>
 		</div>
 		<!--/.nav-collapse -->
