--- a/src/main/resources/static/app/views/home.html
+++ b/src/main/resources/static/app/views/home.html
@@ -26,7 +26,7 @@
                         <td>add info</td>
                     </tr>
                     <tr>
-                        <td><lf-ng-md-file-input ng-model-options="source" lf-files="files05" lf-browse-label="Search" lf-remove-label="Delete" lf-drag-and-drop-label="Drag and Drop here!" drag preview></lf-ng-md-file-input></td>
+                        <td><lf-ng-md-file-input lf-files="files05" lf-browse-label="Search" lf-remove-label="Delete" lf-drag-and-drop-label="Drag and Drop here!" drag preview></lf-ng-md-file-input></td>
                         <td><form ng-submit="publish()">
                             <div class="form-group">
                                 <label for="name">Name your media</label>
