--- a/src/main/resources/static/app/views/home.html
+++ b/src/main/resources/static/app/views/home.html
@@ -36,7 +36,7 @@
                             <div class="form-group">
                                 <label for="tags">Add tags</label>
                                 <br>
-                                <tag-manager id="tags" ng-init="tags=[]" tags="tags"></tag-manager>
+                                <tag-manager id="tags" ng-init="tags=[]" ng-model="tags" tags="tags"></tag-manager>
                             </div>
                             <div class="form-group">
                                 <label for="description">Add description</label>
