--- a/src/main/resources/static/app/views/nav.html
+++ b/src/main/resources/static/app/views/nav.html
@@ -30,7 +30,7 @@
 
 				<li ng-show="user.username"><a> <span class="user">Hi,
 							{{user.username}}</span> <span ng-click="logout()" href=""
-						class="logout">Logout</span>
+						class="logout"><img width="25" height="25" src="https://image.freepik.com/free-icon/logout_318-10026.jpg"></span>
 				</a></li>
 				<li ng-show="!user.username"><a ui-sref="register">Sign Up</a></li>
 				<li ng-show="!user.username"><a ui-sref="login">Log In</a></li>
