--- a/src/main/resources/static/app/views/home.html
+++ b/src/main/resources/static/app/views/home.html
@@ -1,19 +1,22 @@
 <!--<pre>{{user|json}}</pre>-->
-
-    <div class="input-group" width="100%">
-        <input type="text" class="form-control" placeholder="Search by keyword">
-        <span class="input-group-btn">
-        <button class="btn btn-default" type="button">Search</button>
-      </span>
-    </div>
+<section class="container">
+    <form class="search" method="post" action="index.html" width="100%">
+        <input ng-model="searchText" type="search" name="q" placeholder="Search..." autocomplete="off">
+        <ul class="search-ac">
+            <li ng-repeat="one in allTags | filter:searchText"><a href="index.html">{{one.name}}</a></li>
+        </ul>
+        <button type="submit" class="btn btn-default">Search</button>
+    </form>
+</section>
 <div id = "popularTags">
-    <h style="font-size: 30px">e.g.  </h><a href="javascript:void(0)" ng-repeat="tag in popularTags" style="padding-right: 20px">{{tag.name}}</a>
+    <h style="font-size: 30px">e.g.  </h><a href="javascript:void(0)" ng-repeat="tag in popularTags | limitTo:7" style="padding-right: 20px">{{tag.name}}</a>
 </div>
 <br>
 <br>
 <!-- /input-group -->
 <!-- Trigger the modal with a button -->
 <!--<button type="button" class="btn btn-info btn-lg" >Open Modal</button>-->
+
 <div>
 <div class="col-xs-6 col-md-3">
     <a href="javascript:void(0)" class="thumbnail" data-toggle="modal" data-target="#myModal">
