--- a/src/main/resources/static/app/views/login.html
+++ b/src/main/resources/static/app/views/login.html
@@ -14,13 +14,12 @@
 																  placeholder="Password"
 							class="form-control" id="pwd" ng-model="password">
 					</div>
-					<button type="submit" class="btn btn-default">Login</button>
+					<button id = "login" type="submit" class="btn btn-default">Login</button>
 
 					<div class="alert alert-info margin-top-5" ng-show="message">{{message}}</div>
 				</form>
-
-					<label>Don't have an acoount? </label><a ui-sref="register"> SignUp</a>
 			</div>
 		</div>
 	</div>
+	<label>Don't have an acoount? </label><a ui-sref="register"> SignUp</a>
 </div>
