--- a/src/main/resources/static/app/views/login.html
+++ b/src/main/resources/static/app/views/login.html
@@ -21,5 +21,7 @@
 			</div>
 		</div>
 	</div>
+	<div id="toRegister" align="center">
 	<label>Don't have an acoount? </label><a ui-sref="register"> SignUp</a>
+	</div>
 </div>
