--- a/src/main/resources/static/app/views/register.html
+++ b/src/main/resources/static/app/views/register.html
@@ -60,10 +60,12 @@
 
 					<button type="submit" class="btn btn-default btn-success"
 						ng-disabled="register.$invalid || (confirmPassword != appUser.password)">SIGN ME UP</button>
-					<button class="btn btn-default" ui-sref="login">Login</button>
 					<div class="alert alert-info margin-top-5" ng-show="message">{{message}}</div>
 				</form>
 			</div>
 		</div>
+	</div>
+	<div id="toLogin" align="center">
+		<label>Do you have any account? </label><a ui-sref="login"> Login</a>
 	</div>
 </div>
