--- a/src/main/resources/static/app/css/common.css
+++ b/src/main/resources/static/app/css/common.css
@@ -176,3 +176,81 @@ td >form {
 #toRegister{
     align:center;
 }
+
+#MainImg{
+    width: 360px;
+    height: 230px;
+    max-width: 500%;
+}
+
+/*.tooltip {*/
+    /*position: relative;*/
+    /*display: inline-block;*/
+    /*border-bottom: 1px dotted black; !* If you want dots under the hoverable text *!*/
+/*}*/
+
+/*.tooltip {*/
+    /*display: none;*/
+    /*position: absolute;*/
+    /*background-color: #222;*/
+    /*padding: 7px 10px;*/
+    /*max-width: 250px;*/
+    /*color: #fff;*/
+/*}*/
+
+/*.tooltip-show {*/
+    /*display: inherit;*/
+/*}*/
+
+/*.tooltip-arrow {*/
+    /*position: absolute;*/
+    /*width: 0;*/
+    /*height: 0;*/
+/*}*/
+
+/*.tooltip-down .tooltip-arrow {*/
+    /*top: -5px;*/
+    /*left: 50%;*/
+    /*margin-left: -5px;*/
+    /*border-left: 5px solid transparent;*/
+    /*border-right: 5px solid transparent;*/
+    /*border-bottom: 5px solid #222;*/
+/*}*/
+
+/*.tooltip-up .tooltip-arrow {*/
+    /*bottom: -5px;*/
+    /*left: 50%;*/
+    /*margin-left: -5px;*/
+    /*border-left: 5px solid transparent;*/
+    /*border-right: 5px solid transparent;*/
+    /*border-top: 5px solid #222;*/
+/*}*/
+
+/*.tooltip-right .tooltip-arrow {*/
+    /*left: -5px;*/
+    /*top: 50%;*/
+    /*margin-top: -3px;*/
+    /*border-top: 5px solid transparent;*/
+    /*border-bottom: 5px solid transparent;*/
+    /*border-right: 5px solid #222;*/
+/*}*/
+
+/*.tooltip-left .tooltip-arrow {*/
+    /*right: -5px;*/
+    /*top: 50%;*/
+    /*margin-top: -3px;*/
+    /*border-top: 5px solid transparent;*/
+    /*border-bottom: 5px solid transparent;*/
+    /*border-left: 5px solid #222;*/
+/*}*/
+/*#publish {*/
+    /*display: inline-block;*/
+/*}*/
+
+/*#publish .btn[disabled] {*/
+    /*pointer-events: none;*/
+/*}*/
+
+/*#publish {*/
+    /*cursor: not-allowed;*/
+/*}*/
