--- a/src/main/resources/static/app/views/home.html
+++ b/src/main/resources/static/app/views/home.html
@@ -48,7 +48,7 @@
         <!-- Modal content-->
         <div class="modal-content">
             <div class="modal-header">
-                <button type="button" class="close" data-dismiss="modal">&times;</button>
+                <button id = "closeModal" type="button" class="close" data-dismiss="modal">&times;</button>
                 <h4 class="modal-title">Add Image Form</h4>
             </div>
             <div class="modal-body">
