--- a/src/main/resources/static/app/views/home.html
+++ b/src/main/resources/static/app/views/home.html
@@ -84,6 +84,9 @@
                                     >
                                 Publish
                             </button>
+                            <p class="help-block" ng-init = "dataLoaded = true" class="text-center" ng-hide="dataLoaded">
+                                <img width="50px" height="25px" src="https://media.giphy.com/media/fjuI4besWF2Wk/giphy.gif">
+                            </p>
                             <p ng-show="!(name.length>0 &&
                              description.length>0 && tags.length>0 && files05.length>0)" class="help-block">Fill in all the fields</p>
 
